[workspace.package]
version = "0.0.1"
authors = ["staslock"]
description = "Advent of code 2022"

[workspace]
members = [
    "d01_01",
    "d01_02",
    "d02_01",
    "d02_02",
    "d03_01",
    "d03_02",
    "d04_01",
    "d04_02",
    "d05_01",
    "d05_02",
    "runner"
]

[workspace.dependencies]
itertools = "0.10.5"