[workspace.package]
version = "0.0.1"
authors = ["staslock"]
description = "Advent of code 2022"

[workspace]
members = [
    "d01_01",
    "d01_02",
    "d02_01",
    "d02_02",
    "d03_01",
    "d03_02",
    "d04_01",
    "d04_02",
    "d05_01",
    "d05_02",
    "d06_01",
    "d06_02",
    "d07_01",
    "d07_02",
    "d08_01",
    "d08_02",
    "d09_01",
    "d09_02",
    "d10_01",
    "d10_02",
    "d11_01",
    "d11_02",
    "d12_01",
    "d12_02",
    "d13_01",
    "d13_02",
    "d14_01",
    "d14_02",
    "d15_01",
    "d15_02",
    "runner"
]

[workspace.dependencies]
regex = "1.7.0"
itertools = "0.10.5"
scanf = "1.2.1"
lazy_static = "1.4.0"