[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d01_01 = { path = "../d01_01" }
d01_02 = { path = "../d01_02" }
d02_01 = { path = "../d02_01" }
d02_02 = { path = "../d02_02" }
d03_01 = { path = "../d03_01" }
d03_02 = { path = "../d03_02" }