[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d01_01 = { path = "../d01_01" }
d01_02 = { path = "../d01_02" }
d02_01 = { path = "../d02_01" }
d02_02 = { path = "../d02_02" }
d03_01 = { path = "../d03_01" }
d03_02 = { path = "../d03_02" }
d04_01 = { path = "../d04_01" }
d04_02 = { path = "../d04_02" }
d05_01 = { path = "../d05_01" }
d05_02 = { path = "../d05_02" }
d06_01 = { path = "../d06_01" }
d06_02 = { path = "../d06_02" }
d07_01 = { path = "../d07_01" }
d07_02 = { path = "../d07_02" }
d08_01 = { path = "../d08_01" }
d08_02 = { path = "../d08_02" }
d09_01 = { path = "../d09_01" }
d09_02 = { path = "../d09_02" }
d10_01 = { path = "../d10_01" }
d10_02 = { path = "../d10_02" }
