[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
d01_01 = { path = "../d01_01" }
d01_02 = { path = "../d01_02" }
d02_01 = { path = "../d02_01" }
d02_02 = { path = "../d02_02" }
d03_01 = { path = "../d03_01" }
d03_02 = { path = "../d03_02" }
d04_01 = { path = "../d04_01" }
d04_02 = { path = "../d04_02" }
d05_01 = { path = "../d05_01" }
d05_02 = { path = "../d05_02" }
d06_01 = { path = "../d06_01" }
d06_02 = { path = "../d06_02" }
d07_01 = { path = "../d07_01" }
d07_02 = { path = "../d07_02" }
d08_01 = { path = "../d08_01" }
d08_02 = { path = "../d08_02" }
d09_01 = { path = "../d09_01" }
d09_02 = { path = "../d09_02" }
d10_01 = { path = "../d10_01" }
d10_02 = { path = "../d10_02" }
d11_01 = { path = "../d11_01" }
d11_02 = { path = "../d11_02" }
d12_01 = { path = "../d12_01" }
d12_02 = { path = "../d12_02" }
d13_01 = { path = "../d13_01" }
d13_02 = { path = "../d13_02" }
d14_01 = { path = "../d14_01" }
d14_02 = { path = "../d14_02" }
d15_01 = { path = "../d15_01" }
d15_02 = { path = "../d15_02" }
d16_01 = { path = "../d16_01" }
d16_02 = { path = "../d16_02" }
d17_01 = { path = "../d17_01" }
d17_02 = { path = "../d17_02" }
